implement Fields validation in user service